fix font-size on mobile of buttons

--- a/src/assets/sass/pages/_games.scss
+++ b/src/assets/sass/pages/_games.scss
@@ -530,6 +530,9 @@
     width: 150px;
     margin-right: 20px;
     font-size: 2em;
+    @media (max-width: 667px) {
+        font-size: 1.5em;
+    }
     font-weight: bold;
     background-color: white;
 }
